--- a/_forums/2017-05-03-question-2.md
+++ b/_forums/2017-05-03-question-2.md
@@ -1,6 +1,7 @@
 ---
 layout: forum
 title:  "Question 2"
+comments: True
 author: xena
 ---
 Cillum tilde skateboard keytar. Cronut butcher pop-up, pabst bespoke seitan kickstarter et est unicorn food truck. Fingerstache semiotics taiyaki craft beer. Man bun forage farm-to-table fingerstache four loko in.
